--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <include layout="@layout/icono3"/>
+        <include layout="@layout/icono3"/>
+
 
 
 
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
+
+
+
