--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <include layout="@layout/icono3"/>
-        <include layout="@layout/icono3"/>
 
+        <include layout="@layout/icono2" />
 
+        <include layout="@layout/icono3" />
 
+        <include layout="@layout/comentarios3" />
 
     </LinearLayout>
 
