--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,6 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.aula7.parcialfelipeiguai029214.MainActivity"
+    android:orientation="vertical"
+
     >
 
     <LinearLayout
@@ -22,7 +24,7 @@
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
 
 
 
